crates/pg_syntax/tests/snapshots/data/0054@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE CONVERSION myconv FOR 'UTF8' TO 'LATIN1' FROM myfunc;"
---
CreateConversionStmt@0..60
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  ConversionP@7..17 "CONVERSION"
  Whitespace@17..18 " "
  Ident@18..24 "myconv"
  Whitespace@24..25 " "
  For@25..28 "FOR"
  Whitespace@28..29 " "
  Sconst@29..35 "'UTF8'"
  Whitespace@35..36 " "
  To@36..38 "TO"
  Whitespace@38..39 " "
  Sconst@39..47 "'LATIN1'"
  Whitespace@47..48 " "
  From@48..52 "FROM"
  Whitespace@52..53 " "
  Ident@53..59 "myfunc"
  Ascii59@59..60 ";"

