crates/pg_syntax/tests/snapshots/data/0054@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE DEFAULT CONVERSION myconv FOR 'UTF8' TO 'LATIN1' FROM myfunc;"
---
CreateConversionStmt@0..68
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Default@7..14 "DEFAULT"
  Whitespace@14..15 " "
  ConversionP@15..25 "CONVERSION"
  Whitespace@25..26 " "
  Ident@26..32 "myconv"
  Whitespace@32..33 " "
  For@33..36 "FOR"
  Whitespace@36..37 " "
  Sconst@37..43 "'UTF8'"
  Whitespace@43..44 " "
  To@44..46 "TO"
  Whitespace@46..47 " "
  Sconst@47..55 "'LATIN1'"
  Whitespace@55..56 " "
  From@56..60 "FROM"
  Whitespace@60..61 " "
  Ident@61..67 "myfunc"
  Ascii59@67..68 ";"

