crates/pg_syntax/tests/snapshots/data/0056@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE OR REPLACE TRANSFORM FOR hstore LANGUAGE plpython3u (\n    FROM SQL WITH FUNCTION hstore_to_plpython(internal),\n    TO SQL WITH FUNCTION plpython_to_hstore(internal)\n);"
---
CreateTransformStmt@0..174
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Or@7..9 "OR"
  Whitespace@9..10 " "
  Replace@10..17 "REPLACE"
  Whitespace@17..18 " "
  Transform@18..27 "TRANSFORM"
  Whitespace@27..28 " "
  For@28..31 "FOR"
  Whitespace@31..32 " "
  TypeName@32..38
    Ident@32..38 "hstore"
  Whitespace@38..39 " "
  Language@39..47 "LANGUAGE"
  Whitespace@47..48 " "
  Ident@48..58 "plpython3u"
  Whitespace@58..59 " "
  Ascii40@59..60 "("
  Newline@60..61 "\n"
  Whitespace@61..65 "    "
  From@65..69 "FROM"
  Whitespace@69..70 " "
  SqlP@70..73 "SQL"
  Whitespace@73..74 " "
  With@74..78 "WITH"
  Whitespace@78..79 " "
  Function@79..87 "FUNCTION"
  Whitespace@87..88 " "
  ObjectWithArgs@88..118
    Ident@88..106 "hstore_to_plpython"
    Ascii40@106..107 "("
    TypeName@107..115
      Ident@107..115 "internal"
    Ascii41@115..116 ")"
    Ascii44@116..117 ","
    Newline@117..118 "\n"
  Whitespace@118..122 "    "
  To@122..124 "TO"
  Whitespace@124..125 " "
  SqlP@125..128 "SQL"
  Whitespace@128..129 " "
  With@129..133 "WITH"
  Whitespace@133..134 " "
  Function@134..142 "FUNCTION"
  Whitespace@142..143 " "
  ObjectWithArgs@143..174
    Ident@143..161 "plpython_to_hstore"
    Ascii40@161..162 "("
    TypeName@162..170
      Ident@162..170 "internal"
    Ascii41@170..171 ")"
    Newline@171..172 "\n"
    Ascii41@172..173 ")"
    Ascii59@173..174 ";"

