crates/pg_syntax/tests/snapshots/data/0057@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE users CONTINUE IDENTITY RESTRICT;
---
TruncateStmt@0..42
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..14
    Ident@9..14 "users"
  Whitespace@14..15 " "
  ContinueP@15..23 "CONTINUE"
  Whitespace@23..24 " "
  IdentityP@24..32 "IDENTITY"
  Whitespace@32..33 " "
  Restrict@33..41 "RESTRICT"
  Ascii59@41..42 ";"

