crates/pg_syntax/tests/snapshots/data/0057@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TABLE users RESTART IDENTITY CASCADE;
---
TruncateStmt@0..46
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..20
    Ident@15..20 "users"
  Whitespace@20..21 " "
  Restart@21..28 "RESTART"
  Whitespace@28..29 " "
  IdentityP@29..37 "IDENTITY"
  Whitespace@37..38 " "
  Cascade@38..45 "CASCADE"
  Ascii59@45..46 ";"

