crates/pg_syntax/tests/snapshots/data/0057@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE users;
---
TruncateStmt@0..15
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..14
    Ident@9..14 "users"
  Ascii59@14..15 ";"

