crates/pg_syntax/tests/snapshots/data/0057@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE accounts CASCADE;
---
TruncateStmt@0..26
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..17
    Ident@9..17 "accounts"
  Whitespace@17..18 " "
  Cascade@18..25 "CASCADE"
  Ascii59@25..26 ";"

