crates/pg_syntax/tests/snapshots/data/0057@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE accounts RESTRICT;
---
TruncateStmt@0..27
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..17
    Ident@9..17 "accounts"
  Whitespace@17..18 " "
  Restrict@18..26 "RESTRICT"
  Ascii59@26..27 ";"

