crates/pg_syntax/tests/snapshots/data/0057@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TABLE users;
---
TruncateStmt@0..21
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..20
    Ident@15..20 "users"
  Ascii59@20..21 ";"

